blocks/embed/embed.css
.embed {
  width: unset;
  text-align: center;
  max-width: 1000px;
  margin: 32px auto;
}

.embed > div {
  display: flex;
  justify-content: center;
}

.embed.embed-twitter .twitter-tweet-rendered {
  margin-left: auto;
  margin-right: auto;
}

.embed .embed-placeholder {
  width: 100%;
  aspect-ratio: 16 / 9;
  position: relative;
}

.embed .embed-placeholder > * {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  inset: 0;
}

.embed .embed-placeholder picture img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.embed .embed-placeholder-play button {
  box-sizing: border-box;
  position: relative;
  display: block;
  transform: scale(3);
  width: 22px;
  height: 22px;
  border: 2px solid;
  border-radius: 20px;
  padding: 0;
}

.embed .embed-placeholder-play button::before {
  content: "";
  display: block;
  box-sizing: border-box;
  position: absolute;
  width: 0;
  height: 10px;
  border-top: 5px solid transparent;
  border-bottom: 5px solid transparent;
  border-left: 6px solid;
  top: 4px;
  left: 7px;
}

.embed.style-align-left-half {
    margin: 20px 70px 20px 0;
    max-width: 60%;

    & > div {
        justify-content: left;
    }
}

.embed.style-align-left-350 {
  margin: 20px 70px 20px 0;
  width: 350px;

  & > div {
      justify-content: left;
  }
}

.embed.style-align-left-with-content {
    max-width: 50%;
    margin: 20px 70px 20px 0;

    div {
        float: left;
        margin-right: 20px;
        margin-bottom: 20px;
    }
}


/* CSS for iframe embed forms */

main .mainmenu .section.rightsection.googleform .block.embed > div {
  height: 1500px !important;
}

main .mainmenu .section.rightsection.googleform .block.embed iframe {
  width: 100%;
  height: 100%;
  vertical-align: middle;
}

.embed.full-size {
    margin: 20px 70px 20px 50px;
    max-width: unset;
}

/* stylelint-disable no-descending-specificity */
.embed.style-align-right-small {
  width: auto;
  display: block;

  div {
    float: right;
    display: block;
    margin: 10px;
    width: 20% !important;
    padding-bottom: 15% !important;
  }

  iframe {
    position: static;
    left: unset !important;
    width: 200px !important;
    height: 180px !important;
  }
}

.embed.style-align-right-small-title {
  float: right;
  display: block;
  width: 20% !important;

  iframe {
    position: static;
    left: unset !important;
    width: 200px !important;
    height: 180px !important;
  }
}

.embed.style-center-small {
    width: 600px;
}

.embed.style-height-1200 {
    height: 1200px;
}

.embed-wrapper + div {
    position: relative;
}

